# pcgp

./: .gitignore  CMakeLists.txt  CMakePresets.json  DoxyFile  README.md  pcgp.c  pcgpmem.c
pcgp_lib/: CMakeLists.txt
source/: CmakeLists.txt
source/pcgp_app/: CMakeLists.txt  pcgp.c
source/pcgp_lib/: CMakeLists.txt  pcgp_lib.c  pcgpmem.c  search.c
source/pcgp_lib/include/: pcgp.h  pcgpmem.h  search.h  types.h
source/pcgp_parallel/: CmakeLists.txt  adam_isomorphism.cpp  pcgp_parallel.cpp
source/pcgp_parallel/include/: adam_isomorphism.hpp  graph_iterator.hpp  pcgp_parallel.hpp  pcgp_wrap.h
source/pcgp_parallel/test/: CMakeLists.txt  pcgp_parallel_test.cpp
source/pcgp_profiling/: CMakeLists.txt  pcgp_prof.c
source/pcgp_test/: CMakeLists.txt  main.cpp
source/pcgpp_app/: CMakeLists.txt  main.cpp  pcgpp.cpp  pcgpp.hpp
source/routing_lib/: CmakeLists.txt  routing.cpp
source/routing_lib/include/: adaptive.h  routing.h
source/routing_lib/test/: CMakeLists.txt  routing_test.cpp
